--- a/modulo_1/ex14_estilos_externos/style.css
+++ b/modulo_1/ex14_estilos_externos/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 body {
-    background-color: lightgoldenrodyellow;
+    background-color: rgb(245, 245, 230);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
@@ -16,5 +16,5 @@ h2 {
 }
 
 p {
-    text-align: justify;
+    text-align: justify; color: rgb(6, 99, 180);
 }
