--- a/modulo_1/ex19_seletores/style.css
+++ b/modulo_1/ex19_seletores/style.css
@@ -21,7 +21,7 @@ body{
 
 h1 {
     font-family: 'A';
-    color: rgb(255, 255, 255);
+    color: rgb(255, 0, 0);
     font-size: 50px;
     letter-spacing: 10px;
     text-align: center;
@@ -31,6 +31,7 @@ h1 {
 h1#Principal{
     font-family: 'B';
     background-color: rgb(0, 0, 0);
+    color: aqua;
 }
 
 h2 {
