--- a/modulo_1/desafios/10-projeto/estilo/style.css
+++ b/modulo_1/desafios/10-projeto/estilo/style.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+HU:wght@100..400&family=Playwrite+PE:wght@100..400&display=swap');
+
+@font-face {
+    font-family: 'especial';
+    src: url('/modulo_1/desafios/10-projeto/fonts/Hellbone-Demo.otf') format('opentype');
+    font-weight: normal;
+}
+
 :root {
     --cor0: #c5ebd6;
     --cor1: #83e1ad;
@@ -7,9 +15,46 @@
     --cor3: #2fa866;
     --cor4: #1a5c37;
     --cor5: #063d1e;
+
+    --fonte-padrão: arial, verdana. helvetica, sans-serif;
+    --fonte-destaque: 'Playwrite PE', 'cursive';
+    --fonte-especial: 'especial', 'cursive';
+}
+
+*{
+    margin: 0px;
+    padding: 0px;
 }
 
 body {
     background-color: #c5ebd6 ;
-    
+}
+header {
+    background-color: var(--cor4);
+}
+
+header > h1 {
+    color:aliceblue;
+    font-family: var(--fonte-especial);
+}
+
+header > p {
+    color: aliceblue;
+}
+
+nav {
+    background-color: var(--cor5);
+}
+
+main {
+    background-color: aliceblue;
+}
+main h1 {
+    color: var(--cor5);
+    font-family: var(--fonte-destaque);
+}
+
+footer {
+    background-color: rgb(0, 0, 0);
+    color: aliceblue;
 }
