--- a/modulo_1/desafios/10-projeto/estilo/style.css
+++ b/modulo_1/desafios/10-projeto/estilo/style.css
@@ -34,6 +34,7 @@
 body {
     background-color: #c5ebd6 ;
 }
+
 header {
     background-color: var(--cor4);
 }
@@ -53,13 +54,36 @@ nav {
     background-color: var(--cor5);
 }
 
-main {
-    background-color: aliceblue;
+nav > a {
+    margin-right: 30px;
+    color: rgba(0, 255, 34, 0.76);
 }
+
+main {
+    min-width: 300px;
+    max-width: 1000px;
+    margin: auto;
+    margin-bottom: 30px;
+    padding: 20px;
+    background-color: aliceblue;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.699);
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
 main h1 {
     color: var(--cor5);
-    font-family: var(--fonte-destaque);
-    
+    font-family: var(--fonte-destaque);   
+}
+
+main img {
+    width: 100%;
+}
+
+main img.pequeno {
+    width: 50%;
+    display: block;
+    margin: auto;
 }
 
 footer {
