--- a/modulo_1/desafios/10-projeto/estilo/style.css
+++ b/modulo_1/desafios/10-projeto/estilo/style.css
@@ -126,9 +126,10 @@ main p {
 }
 
 main strong {
-    color: #063d1e;
+    color: #1cda15;
     font-weight: bolder;
     padding: 5px 7px;
+    
 }
 
 main a {
@@ -152,7 +153,54 @@ main img.pequeno {
     margin: auto;
 }
 
+iframe {
+    text-align: center; /*não funciona a centralização*/
+}
+
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    color: rgb(217, 255, 0);
+    font-size: 1.2em;
+    border-radius: 20px; /*arrendondar as pontas*/
+}
+
+aside h3 {
+    color: rgb(47, 0, 255);
+    font-family: var(--fonte-destaque);
+    background-color: rgb(255, 255, 255);
+}
+
+aside p {
+    color: red; margin: 50px;
+}
+
+aside > ul {
+    color: rgb(0, 0, 0);
+    list-style-position: inside; 
+    columns: 2; /*divide as colunas da lista*/
+    list-style-type: '\1F525'; /*emojipedea, o fogo foi pego lá*/
+}
+
+
 footer {
     background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 1em;
+    padding: 5px; 
+    background-image: linear-gradient(to right, rgb(255, 0, 0), transparent);
+}
+
+footer a {
     color: aliceblue;
+    font-weight: bolder;
+    text-decoration: none;
+}
+
+footer a:hover { /*quando passar o mouse emcima ele aparece a linha*/
+    text-decoration: underline;
+    background-color: rgb(170, 47, 47);
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    
 }
